--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,6 +4,23 @@
     box-sizing: border-box;
 }
 
+.top{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.top-left a{
+    justify-content: left;
+    text-decoration: none;
+    font-size: 25px;
+}
+
 .top-right a{
+    display: flex;
     justify-content: end;
+    display: inline-block;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 20px;
 }
