--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,6 +8,10 @@
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+    background-color: aqua;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .top-left a{
@@ -23,4 +27,20 @@
     padding: 10px;
     text-decoration: none;
     font-size: 20px;
+}
+
+#home-page{
+    color: darkred;
+    margin-top: 50px;
+    margin-left: 60px;
+    font-size: 25px;
+}
+
+#home-page{
+    display: flex;
+}
+
+.home-img {
+    background-image: cover;
+    margin-left: 50px;
 }
