--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -29,6 +29,16 @@
     font-size: 20px;
 }
 
+.btn{
+    color: black;
+    background-color: yellow;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-radius: 5px;
+}
 #home-page{
     color: darkred;
     margin-top: 50px;
