--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -40,15 +40,31 @@
     border-radius: 5px;
 }
 #home-page{
+    display: flex;
     color: darkred;
     margin-top: 50px;
     margin-left: 60px;
     font-size: 25px;
 }
 
-#home-page{
-    display: flex;
+#home-page > .home > h3{
+    font-size: 30px;
+    line-height: 3rem;
+    margin-top: 50px;
 }
+
+.btn2{
+    background-color: yellow;
+    color: black;
+    margin-left: 120px;
+    margin-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+}
+
 
 .home-img {
     background-image: cover;
