added background image

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,9 +5,8 @@
 }
 
 body {
-    margin: 0;
+    margin: 10px;
     padding: 0;
-    background-image: url();
 }
 
 .top{
@@ -38,7 +37,6 @@ body {
 .btn{
     color: black;
     background-color: yellow;
-
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 7px;
@@ -51,6 +49,9 @@ body {
     margin-top: 50px;
     margin-left: 60px;
     font-size: 25px;
+    background-image: url(https://t4.ftcdn.net/jpg/04/82/39/91/240_F_482399159_oCvn3xuvjD7m6kdOsxB2CGJXkgAdaMID.jpg);
+    background-size: cover;
+    padding-bottom: 100px;
 }
 
 #home-page > .home > h3{
@@ -77,6 +78,8 @@ body {
 }
 
 .icons{
+    color: darkgoldenrod;
+    font-size: 25px;
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
