--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,6 +7,7 @@
 body {
     margin: 10px;
     padding: 0;
+    background-color: grey;
 }
 
 .top{
@@ -28,8 +29,9 @@ body {
 .top-right a{
     display: flex;
     justify-content: end;
+    margin-left: 50px;
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
     text-decoration: none;
     font-size: 20px;
 }
@@ -37,6 +39,7 @@ body {
 .btn{
     color: black;
     background-color: yellow;
+    margin-left: 40px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 7px;
@@ -44,20 +47,16 @@ body {
     border-radius: 5px;
 }
 #home-page{
-    display: flex;
     color: darkred;
-    margin-top: 50px;
-    margin-left: 60px;
-    font-size: 25px;
-    background-image: url(https://t4.ftcdn.net/jpg/04/82/39/91/240_F_482399159_oCvn3xuvjD7m6kdOsxB2CGJXkgAdaMID.jpg);
-    background-size: cover;
-    padding-bottom: 100px;
+    display: flex;
+    margin-top: 30px;
 }
 
 #home-page > .home > h3{
     font-size: 30px;
     line-height: 3rem;
     margin-top: 50px;
+    margin-left: 50px;
 }
 
 .btn2{
@@ -72,16 +71,23 @@ body {
     border-radius: 5px;
 }
 
-.home-img {
+.home-img{
     background-image: cover;
     margin-left: 50px;
 }
 
 .icons{
-    color: darkgoldenrod;
+    color: black;
     font-size: 25px;
     display: flex;
     justify-content: space-evenly;
     margin-top: 50px;
 }
 
+#products{
+    font-size: 25px;
+    text-align: left;
+    margin-top: 30px;
+    text-align: center;
+    background-color: whitesmoke;
+}
