--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -86,8 +86,24 @@ body {
 
 #products{
     font-size: 25px;
-    text-align: left;
     margin-top: 30px;
     text-align: center;
     background-color: whitesmoke;
 }
+
+#products h3{
+    text-align: center;
+    padding-top: 30px;
+}
+
+#products p{
+    text-align: left;
+}
+
+#products ul li{
+    text-align: left;
+    margin-left: 100px;
+}
+
+
+
