--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,7 +15,7 @@ body {
     justify-content: space-around;
     margin-top: 20px;
     background-color: aqua;
-    padding: 10px;
+    padding: 30px;
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -100,11 +100,27 @@ body {
     margin-top: 30px;
     text-align: center;
     background-color: honeydew;
+    padding-bottom: 50px;
+    padding-top: 30px;
 }
 
-#products h3{
+.furn-products{
+    display: flex;
+}
+
+.backg2-img{
+    margin-left: 200px;
+    margin-top: 30px;
+}
+
+.theProducts h3{
     text-align: center;
     padding-top: 30px;
+}
+
+.featureProducts p{
+    color: black;
+
 }
 
 #products h4{
@@ -115,11 +131,13 @@ body {
     text-align: left;
     margin-left: 100px;
     margin-top: 50px;
-    color: black;
+    color: maroon;
+    margin-bottom: 20px;
+    line-height: 3rem;
 }
 
 #products ul li{
-    text-align: left;
+    display: inline;
     margin-left: 100px;
     margin-top: 10px;
 }
