--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -142,5 +142,38 @@ body {
     margin-top: 10px;
 }
 
+.about{
+    background-color: antiquewhite;
+    padding-bottom: 100px;
+    padding-top: 30px;
+}
+
+.about h3{
+    margin-top: 30px;
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.ourAbout p{
+    text-align: center;
+    font-size: 25px;
+}
+
+#shop{
+    float: right;
+    margin-right: 600px;
+    margin-top: 10px;
+    background-color: yellow;
+    font-size: 20px;
+    color: black;
+    margin-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+}
+
 
 
