--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -64,8 +64,8 @@ body {
     color: black;
     margin-left: 120px;
     margin-top: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
@@ -174,6 +174,22 @@ body {
     padding-bottom: 5px;
     border-radius: 5px;
 }
+
+.contact{
+    background-color: antiquewhite;
+    padding-bottom: 50px;
+    text-align: center;
+}
+
+.footer{
+    background-color: darkslategray;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 50px;
+}
+
 
 
 
