--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -82,6 +82,36 @@ body {
     border-radius: 5px;
 }
 
+.form{
+    margin-top: 25px;
+    margin-left: 50px;
+    background-color: black;
+    padding-top: 20px;
+}
+
+.form h3{
+    color: white;
+    margin-bottom: 10px;
+}
+
+.row > .input-form{
+    padding-bottom: 10px;
+    margin-left: 90px;
+}
+
+.form-submit{
+    background-color: yellow;
+    color: black;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 120px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-radius: 5px;
+}
+
 .home-img{
     background-image: cover;
     margin-left: 50px;
