--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -86,17 +86,27 @@ body {
     margin-top: 25px;
     margin-left: 50px;
     background-color: black;
-    padding-top: 20px;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 
-.form h3{
-    color: white;
+h4{
     margin-bottom: 10px;
+    margin-left: 70px;
+    margin-top: 100px;
+    color: rgb(30, 210, 54);
+    font-size: 25px;
 }
 
-.row > .input-form{
-    padding-bottom: 10px;
+.input-form{
+    padding-bottom: 15px;
     margin-left: 90px;
+}
+
+.form1{
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
 }
 
 .form-submit{
@@ -104,12 +114,23 @@ body {
     color: black;
     font-size: 20px;
     margin-top: 10px;
-    margin-left: 120px;
+    margin-left: 150px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 7px;
     padding-bottom: 7px;
     border-radius: 5px;
+}
+
+.new-user{
+    display: flex;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+
+.new-user a{
+    margin-left: 20px;
+    font-size: 20px;
 }
 
 .home-img{
