--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 .top-left a{
+    color: black;
     justify-content: left;
     text-decoration: none;
     font-size: 25px;
@@ -84,15 +85,18 @@ body {
 
 .form{
     margin-top: 25px;
-    margin-left: 50px;
+    margin-right: 490px;
+    margin-left: 300px;
+    margin-bottom: 30px;
     background-color: black;
     padding-top: 40px;
     padding-bottom: 20px;
 }
 
 h4{
+
+    margin-left: 320px;
     margin-bottom: 10px;
-    margin-left: 70px;
     margin-top: 100px;
     color: rgb(30, 210, 54);
     font-size: 25px;
@@ -114,7 +118,7 @@ h4{
     color: black;
     font-size: 20px;
     margin-top: 10px;
-    margin-left: 150px;
+    margin-left: 160px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 7px;
@@ -124,18 +128,22 @@ h4{
 
 .new-user{
     display: flex;
-    margin-left: 50px;
+    margin-right: 50px;
     margin-top: 20px;
 }
 
+.new-user h3{
+    color: rgb(139, 0, 81);
+    margin-left: 70px;
+}
+ 
 .new-user a{
     margin-left: 20px;
     font-size: 20px;
 }
 
-.home-img{
-    background-image: cover;
-    margin-left: 50px;
+.home-img img{
+    margin-left: 100px;
 }
 
 .icons{
@@ -163,9 +171,10 @@ h4{
     margin-top: 30px;
 }
 
-.theProducts h3{
+.featureProducts h3{
     text-align: center;
     padding-top: 30px;
+    margin-top: 30px;
 }
 
 .featureProducts p{
@@ -231,11 +240,15 @@ h4{
 
 .footer{
     background-color: darkslategray;
-    padding-top: 30px;
-    padding-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 60px;
     text-align: center;
     font-size: 25px;
     margin-bottom: 50px;
+}
+
+.footer{
+    text-align: center;
 }
 
 
