--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    margin: 10px;
+    margin: 0px;
     padding: 0;
     background-color: grey;
 }
@@ -16,8 +16,6 @@ body {
     margin-top: 20px;
     background-color: aqua;
     padding: 30px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .top-left a{
@@ -113,7 +111,7 @@ h4{
     padding: 10px;
 }
 
-.form-submit{
+#form-submit{
     background-color: yellow;
     color: black;
     font-size: 20px;
