--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -82,20 +82,20 @@ body {
 }
 
 .form{
-    margin-top: 25px;
-    margin-right: 490px;
-    margin-left: 300px;
-    margin-bottom: 30px;
+    background-color: honeydew;
     background-color: black;
-    padding-top: 40px;
+    width: min-content;
+    padding-right: 70px;
+    margin-left: 300px;
+    margin-top: 20px;
     padding-bottom: 20px;
+    padding-top: 10px;
+    justify-content: right;
 }
 
 h4{
-
-    margin-left: 320px;
+    margin-left: 150px;
     margin-bottom: 10px;
-    margin-top: 100px;
     color: rgb(30, 210, 54);
     font-size: 25px;
 }
@@ -249,12 +249,12 @@ h4{
     text-align: center;
 }
 
-.content{
-    margin-left: 400px;
+img{
+    margin-left: 30px;
 }
 
-.button{
-    margin-left: 400px;
+.content{
+    margin-left: 30px;
 }
 
 #buy{
@@ -263,6 +263,7 @@ h4{
     padding-left: 25px;
     padding-right: 25px;
     margin-bottom: 20px;
+    margin-left: 30px;
     margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
