--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -58,7 +58,7 @@ body {
     margin-left: 50px;
 }
 
-.btn2{
+#btn2{
     background-color: yellow;
     color: black;
     margin-left: 120px;
@@ -70,7 +70,7 @@ body {
     border-radius: 5px;
 }
 
-.btn3{
+#btn3{
     background-color: white;
     color: black;
     margin-top: 10px;
@@ -276,9 +276,12 @@ img{
     padding-left: 25px;
     padding-right: 25px;
     margin-bottom: 20px;
+    margin-left: 30px;
     margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
 }
+
+
 
