--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -63,22 +63,11 @@ body {
     margin-left: 50px;
 }
 
-#btn2{
-    background-color: yellow;
-    color: black;
-    margin-left: 120px;
-    margin-top: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 5px;
-}
-
 #btn3{
     background-color: white;
     color: black;
     margin-top: 10px;
+    margin-left: 120px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
@@ -257,6 +246,16 @@ img{
 
 .content{
     margin-left: 30px;
+}
+
+#furniture-list {
+      list-style-type: none;
+      margin-top: 100px;
+      width: 90%;
+      display: flex;
+      grid-gap: 30px;
+      grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
+      padding-left: 20px;
 }
 
 
