--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -43,12 +43,9 @@ body {
     color: mediumblue;
 }
 
-.sub-menu li{
-    display: -webkit-inline-box;
-}
-
 .sub-menu li a{
     color: black;
+    position: static;
 }
 
 #btn{
